Move keyboard select button up to fix bug that shift-spacebar accidentally deselects during relation name edit

--- a/src/App.css
+++ b/src/App.css
@@ -119,16 +119,12 @@
   font-size: 16px;
 }
 
-.relationClickArea {
-  display: inline-block;
-  margin: -10px;
-  padding: 10px;
-  border: 1px dashed transparent;
-  border-radius: 5px;
-}
-
-.relationClickArea:hover {
-  border-color: #ccc;
+.keyboardSelectButton {
+  position: absolute;
+  height: 10px;
+  width: 10px;
+  background: none;
+  border: none;
 }
 
 .selected .relation {
